# historical_statement_index

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml  search_endpoint.md  web_interface_overview.md
sql/documentation/: create_tables.sql  create_triggers.sql  create_views.sql  schema.md
sql/setup/: create_audit_capability.sql  create_chunk_embedding_views.sql  create_initial_tables.sql  create_schema.sql
src/wh_scraper/: chunk.py  config.py  db.py  discover.py  embed.py  models.py  scrape.py  search.py  utils.py  vectorization.py
src/wh_scraper/web/: __init__.py  app.py
src/wh_scraper/web/static/: app.js  styles.css
src/wh_scraper/web/templates/: base.html  documents.html  search.html
