[project]
name = "wh-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=5.3.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "flask>=3.1.2",
    "openai>=1.51.0",
    "tiktoken>=0.7.0",
]
[tool.setuptools.package-data]
"wh_scraper.web" = ["templates/*.html", "static/*.css", "static/*.js"]
